# climate-notebooks

./: .gitignore  LICENSE  ncdf_tutorial.qmd  pyproject.toml
notebooks/: when_to_average.html  when_to_average.qmd  xarray_nn.html  xarray_nn.qmd
src/climate_notebooks/: helpers.py
